--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>AR Photo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+
+  <style>
+    html, body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    a-scene {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+    }
+  </style>
 </head>
 
 <body>
 
 <a-scene
-  mindar-image="imageTargetSrc: targets.mind;"
+  mindar-image="imageTargetSrc: targets.mind; autoStart: true;"
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
-  embedded
-  color-space="sRGB"
-  renderer="colorManagement: true, physicallyCorrectLights"
+  renderer="colorManagement: true"
 >
 
   <a-assets>
-    <video id="arvideo" src="video.mp4" loop muted autoplay></video>
+    <video id="arvideo" src="video.mp4" loop muted playsinline></video>
   </a-assets>
 
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -35,6 +48,19 @@
   </a-entity>
 
 </a-scene>
+
+<script>
+  const video = document.querySelector("#arvideo");
+  const target = document.querySelector("[mindar-image-target]");
+
+  target.addEventListener("targetFound", () => {
+    video.play();
+  });
+
+  target.addEventListener("targetLost", () => {
+    video.pause();
+  });
+</script>
 
 </body>
 </html>
