--- a/index.html
+++ b/index.html
@@ -32,9 +32,73 @@
   renderer="colorManagement: true"
 >
 
+  <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>AR Photo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+
+  <style>
+    html, body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    a-scene {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+    }
+  </style>
+</head>
+
+<body>
+
+<a-scene
+  mindar-image="imageTargetSrc: targets.mind; autoStart: true;"
+  vr-mode-ui="enabled: false"
+  device-orientation-permission-ui="enabled: false"
+  renderer="colorManagement: true"
+>
+
   <a-assets>
     <video id="arvideo" src="video.mp4" loop muted playsinline></video>
   </a-assets>
+
+  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+  <a-entity mindar-image-target="targetIndex: 0">
+    <a-video
+      src="#arvideo"
+      width="1"
+      height="0.75"
+      position="0 0 0">
+    </a-video>
+  </a-entity>
+
+<script>
+  const video = document.querySelector("#arvideo");
+  const target = document.querySelector("[mindar-image-target]");
+
+  target.addEventListener("targetFound", () => {
+    video.currentTime = 0;
+    video.play().catch(e => console.log("Play failed:", e));
+  });
+
+  target.addEventListener("targetLost", () => {
+    video.pause();
+  });
+</script>
+
+
+</body>
+</html>
+
 
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
@@ -64,3 +128,4 @@
 
 </body>
 </html>
+
