--- a/index.html
+++ b/index.html
@@ -5,41 +5,10 @@
   <title>AR Photo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
 
-  <style>
-    html, body {
-      margin: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-    a-scene {
-      width: 100%;
-      height: 100%;
-      position: fixed;
-    }
-  </style>
-</head>
-
-<body>
-
-<a-scene
-  mindar-image="imageTargetSrc: targets.mind; autoStart: true;"
-  vr-mode-ui="enabled: false"
-  device-orientation-permission-ui="enabled: false"
-  renderer="colorManagement: true"
->
-
-  <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>AR Photo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <!-- MindAR -->
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
 
   <style>
@@ -67,7 +36,16 @@
 >
 
   <a-assets>
-    <video id="arvideo" src="video.mp4" loop muted playsinline></video>
+    <video 
+      id="arvideo"
+      src="video.mp4"
+      loop
+      muted
+      playsinline
+      webkit-playsinline
+      crossorigin="anonymous"
+      preload="auto">
+    </video>
   </a-assets>
 
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -77,37 +55,8 @@
       src="#arvideo"
       width="1"
       height="0.75"
-      position="0 0 0">
-    </a-video>
-  </a-entity>
-
-<script>
-  const video = document.querySelector("#arvideo");
-  const target = document.querySelector("[mindar-image-target]");
-
-  target.addEventListener("targetFound", () => {
-    video.currentTime = 0;
-    video.play().catch(e => console.log("Play failed:", e));
-  });
-
-  target.addEventListener("targetLost", () => {
-    video.pause();
-  });
-</script>
-
-
-</body>
-</html>
-
-
-  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-  <a-entity mindar-image-target="targetIndex: 0">
-    <a-video
-      src="#arvideo"
-      width="1"
-      height="0.75"
-      position="0 0 0">
+      position="0 0 0"
+      rotation="0 0 0">
     </a-video>
   </a-entity>
 
@@ -118,14 +67,22 @@
   const target = document.querySelector("[mindar-image-target]");
 
   target.addEventListener("targetFound", () => {
-    video.play();
+    video.currentTime = 0;
+    video.play().then(() => {
+      console.log("Video playing");
+    }).catch(err => {
+      console.log("Play error:", err);
+    });
   });
 
   target.addEventListener("targetLost", () => {
     video.pause();
   });
+
+  video.addEventListener("loadeddata", () => {
+    console.log("Video ready");
+  });
 </script>
 
 </body>
 </html>
-
