--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <style>
     html, body {
       margin: 0;
-      width: 100%;
       height: 100%;
       overflow: hidden;
+      background: black;
     }
     a-scene {
       width: 100%;
@@ -29,34 +29,35 @@
 <body>
 
 <a-scene
-  mindar-image="imageTargetSrc: targets.mind; autoStart: true;"
+  mindar-image="imageTargetSrc: targets.mind;"
+  embedded
+  color-space="sRGB"
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
-  renderer="colorManagement: true"
 >
 
   <a-assets>
     <video 
       id="arvideo"
       src="video.mp4"
+      preload="auto"
       loop
       muted
       playsinline
-      webkit-playsinline
-      crossorigin="anonymous"
-      preload="auto">
+      webkit-playsinline>
     </video>
   </a-assets>
 
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-  <a-entity mindar-image-target="targetIndex: 0">
-    <a-video
+  <!-- TARGET -->
+  <a-entity id="target" mindar-image-target="targetIndex: 0">
+    <a-video 
+      id="videoPlane"
       src="#arvideo"
       width="1"
       height="0.75"
-      position="0 0 0"
-      rotation="0 0 0">
+      position="0 0 0">
     </a-video>
   </a-entity>
 
@@ -64,23 +65,15 @@
 
 <script>
   const video = document.querySelector("#arvideo");
-  const target = document.querySelector("[mindar-image-target]");
+  const target = document.querySelector("#target");
 
   target.addEventListener("targetFound", () => {
     video.currentTime = 0;
-    video.play().then(() => {
-      console.log("Video playing");
-    }).catch(err => {
-      console.log("Play error:", err);
-    });
+    video.play();
   });
 
   target.addEventListener("targetLost", () => {
     video.pause();
-  });
-
-  video.addEventListener("loadeddata", () => {
-    console.log("Video ready");
   });
 </script>
 
