--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>AR Photo - Auto Scale</title>
+  <title>AR Photo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- A-Frame -->
+  
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
-  <!-- MindAR -->
+  
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
 
   <style>
@@ -50,12 +50,12 @@
 
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-  <!-- Image target -->
+  
   <a-entity id="target" mindar-image-target="targetIndex: 0">
     <a-video
       id="videoPlane"
       src="#arvideo"
-      position="0 0 0"
+      position="0 0.8 0"
       rotation="0 0 0">
     </a-video>
   </a-entity>
@@ -67,17 +67,17 @@ const video = document.querySelector("#arvideo");
 const target = document.querySelector("#target");
 const videoPlane = document.querySelector("#videoPlane");
 
-// Auto-play video when target is found
+
 target.addEventListener("targetFound", () => {
   video.currentTime = 0;
   video.muted = false;
   video.play().catch(err => {
-    // fallback autoplay restrictions
+   
     video.muted = true;
     video.play();
   });
 
-  // Auto-scale video to match target
+  
   const targetEntity = target.components['mindar-image-target'];
   if (targetEntity) {
     const width = targetEntity.width || 1;
@@ -88,7 +88,7 @@ target.addEventListener("targetFound", () => {
   }
 });
 
-// Pause video when target lost
+
 target.addEventListener("targetLost", () => {
   video.pause();
 });
@@ -96,3 +96,4 @@ target.addEventListener("targetLost", () => {
 
 </body>
 </html>
+
