--- a/index.html
+++ b/index.html
@@ -1,36 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Our Memories</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style.css">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <style>
+    :root {
+      --bg: #0b0b0d;
+      --card: #141417;
+      --text: #f2f2f2;
+      --muted: #a1a1aa;
+      --accent: #6c63ff;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      overflow-x: hidden;
+    }
+
+    /* ===== Page Load Animation ===== */
+    body {
+      animation: fadeIn 1.2s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* ===== Hero Section ===== */
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 40px;
+    }
+
+    .hero h1 {
+      font-size: clamp(2.5rem, 5vw, 4rem);
+      font-weight: 600;
+      letter-spacing: -0.03em;
+      margin-bottom: 12px;
+      animation: slideUp 1s ease forwards;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      color: var(--muted);
+      max-width: 520px;
+      animation: slideUp 1.2s ease forwards;
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .cta {
+      margin-top: 40px;
+      padding: 14px 28px;
+      background: var(--accent);
+      border-radius: 999px;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .cta:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 12px 30px rgba(108,99,255,0.35);
+    }
+
+    /* ===== Section ===== */
+    section {
+      padding: 120px 8vw;
+    }
+
+    .section-title {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .section-desc {
+      color: var(--muted);
+      max-width: 600px;
+      line-height: 1.6;
+    }
+
+    /* ===== Cards ===== */
+    .cards {
+      margin-top: 50px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 24px;
+    }
+
+    .card {
+      background: var(--card);
+      padding: 28px;
+      border-radius: 20px;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      font-weight: 500;
+    }
+
+    .card p {
+      color: var(--muted);
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+
+    /* ===== Footer ===== */
+    footer {
+      padding: 60px 20px;
+      text-align: center;
+      color: var(--muted);
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 
 <body>
 
-<header>
-  <h1>📸 Our Memories</h1>
-  <p>Photos, videos & AR moments</p>
-</header>
-
-<div class="actions">
-  <a href="ar.html" class="btn">📷 Scan Photo in AR</a>
-</div>
-
-<section class="gallery">
-  <h2>Photos</h2>
-  <div class="grid">
-    <img src="assets/photos/pic1.jpg">
-    <img src="assets/photos/pic2.jpg">
+  <!-- HERO -->
+  <div class="hero">
+    <h1>Our Memories</h1>
+    <p>A private space to relive moments, stories, and experiences — beautifully.</p>
+    <a href="#about" class="cta">Explore</a>
   </div>
 
-  <h2>Videos</h2>
-  <div class="grid">
-    <video src="assets/videos/vid1.mp4" controls></video>
-  </div>
-</section>
+  <!-- ABOUT -->
+  <section id="about">
+    <h2 class="section-title">What this is</h2>
+    <p class="section-desc">
+      This is a clean, distraction-free space designed to hold memories.
+      No noise. No clutter. Just moments — the way they deserve to be remembered.
+    </p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>Smooth Experience</h3>
+        <p>Carefully tuned animations and transitions that feel natural and effortless.</p>
+      </div>
+      <div class="card">
+        <h3>Private & Personal</h3>
+        <p>Built for close friends, not for algorithms or engagement.</p>
+      </div>
+      <div class="card">
+        <h3>Expandable</h3>
+        <p>AR scans, photo galleries, videos — added only when they belong.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    Made with intention ✨
+  </footer>
 
 </body>
 </html>
