--- a/index.html
+++ b/index.html
@@ -149,38 +149,36 @@
 
   <!-- HERO -->
   <div class="hero">
-    <h1>Our Memories</h1>
-    <p>A private space to relive moments, stories, and experiences — beautifully.</p>
-    <a href="#about" class="cta">Explore</a>
+    <h1>2K25-26</h1>
+    <p>Clipped Bank</p>
+    <a href="#about" class="cta">SMASHH IT</a>
   </div>
 
   <!-- ABOUT -->
   <section id="about">
-    <h2 class="section-title">What this is</h2>
+    <h2 class="section-title">fjvnfdjvjndfv</h2>
     <p class="section-desc">
-      This is a clean, distraction-free space designed to hold memories.
-      No noise. No clutter. Just moments — the way they deserve to be remembered.
+      avadbfdbgfbd
     </p>
 
     <div class="cards">
       <div class="card">
-        <h3>Smooth Experience</h3>
-        <p>Carefully tuned animations and transitions that feel natural and effortless.</p>
+        <h3>bfbndgnfe</h3>
+        <p>ndfgnfnfn </div>
+      <div class="card">
+        <h3>nfyyn</h3>
+        <p>fdy</p>
       </div>
       <div class="card">
-        <h3>Private & Personal</h3>
-        <p>Built for close friends, not for algorithms or engagement.</p>
-      </div>
-      <div class="card">
-        <h3>Expandable</h3>
-        <p>AR scans, photo galleries, videos — added only when they belong.</p>
+        <h3>fgmmg</h3>
+        <p>ghmgfm</p>
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
   <footer>
-    Made with intention ✨
+    TEST
   </footer>
 
 </body>
