--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <title>Our Memories</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Font -->
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
       --bg: #0b0b0d;
-      --card: #141417;
       --text: #f2f2f2;
       --muted: #a1a1aa;
       --accent: #6c63ff;
@@ -21,146 +20,99 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      scroll-behavior: smooth;
       font-family: 'Inter', sans-serif;
     }
 
     body {
       background: var(--bg);
       color: var(--text);
-      overflow-x: hidden;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    /* ===== Page Load Animation ===== */
-    body {
-      animation: fadeIn 1.2s ease forwards;
+    /* ===== Animated Background ===== */
+    .bg {
+      position: fixed;
+      inset: 0;
+      z-index: -1;
+      background:
+        radial-gradient(circle at 20% 30%, rgba(108,99,255,0.15), transparent 40%),
+        radial-gradient(circle at 80% 70%, rgba(255,255,255,0.06), transparent 40%);
+      animation: floatBG 12s ease-in-out infinite alternate;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    @keyframes floatBG {
+      from { transform: scale(1) translateY(0); }
+      to { transform: scale(1.05) translateY(-10px); }
     }
 
-    /* ===== Hero Section ===== */
-    .hero {
-      min-height: 100vh;
+    /* ===== Center Layout ===== */
+    .container {
+      height: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
       padding: 40px;
+      animation: fadeUp 1.2s ease forwards;
     }
 
-    .hero h1 {
-      font-size: clamp(2.5rem, 5vw, 4rem);
-      font-weight: 600;
-      letter-spacing: -0.03em;
-      margin-bottom: 12px;
-      animation: slideUp 1s ease forwards;
-    }
-
-    .hero p {
-      font-size: 1.1rem;
-      color: var(--muted);
-      max-width: 520px;
-      animation: slideUp 1.2s ease forwards;
-    }
-
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(30px); }
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
+    h1 {
+      font-size: clamp(2.5rem, 6vw, 4rem);
+      font-weight: 600;
+      letter-spacing: -0.03em;
+      margin-bottom: 14px;
+    }
+
+    p {
+      color: var(--muted);
+      max-width: 520px;
+      font-size: 1.05rem;
+    }
+
+    /* ===== Button ===== */
     .cta {
       margin-top: 40px;
-      padding: 14px 28px;
+      padding: 16px 34px;
       background: var(--accent);
       border-radius: 999px;
       color: white;
       text-decoration: none;
       font-weight: 500;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      font-size: 1rem;
+      transition: transform 0.35s ease, box-shadow 0.35s ease;
     }
 
     .cta:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 12px 30px rgba(108,99,255,0.35);
+      transform: translateY(-3px);
+      box-shadow: 0 18px 40px rgba(108,99,255,0.4);
     }
 
-    /* ===== Section ===== */
-    section {
-      padding: 120px 8vw;
-    }
-
-    .section-title {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-
-    .section-desc {
-      color: var(--muted);
-      max-width: 600px;
-      line-height: 1.6;
-    }
-
-    /* ===== Cards ===== */
-    .cards {
-      margin-top: 50px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 24px;
-    }
-
-    .card {
-      background: var(--card);
-      padding: 28px;
-      border-radius: 20px;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-    }
-
-    .card h3 {
-      margin-bottom: 10px;
-      font-weight: 500;
-    }
-
-    .card p {
-      color: var(--muted);
-      font-size: 0.95rem;
-      line-height: 1.5;
-    }
-
-    /* ===== Footer ===== */
-    footer {
-      padding: 60px 20px;
-      text-align: center;
-      color: var(--muted);
-      font-size: 0.9rem;
+    .cta:active {
+      transform: scale(0.96);
     }
   </style>
 </head>
 
 <body>
 
-  <!-- HERO -->
-  <div class="hero">
-    <h1>2K25-26</h1>
-    <p>Clipped Bank</p>
-    <a href="#about" class="cta">SMASHH IT</a>
+  <div class="bg"></div>
+
+  <div class="container">
+    <h1>Our Memories</h1>
+    <p>
+      A quiet place where moments live on.
+    </p>
+
+    <!-- ONE BUTTON ONLY -->
+    <a href="scan.html" class="cta">Explore</a>
   </div>
-
-  <!-- ABOUT -->
-  
-
-  <!-- FOOTER -->
-  <footer>
-    TEST
-  </footer>
 
 </body>
 </html>
