--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Our Memories</title>
+  <title>2025-26</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Font -->
@@ -105,13 +105,13 @@
   <div class="bg"></div>
 
   <div class="container">
-    <h1>Our Memories</h1>
+    <h1>2026-25</h1>
     <p>
-      A quiet place where moments live on.
+      plukky
     </p>
 
     <!-- ONE BUTTON ONLY -->
-    <a href="scan.html" class="cta">Explore</a>
+    <a href="scan.html" class="cta">Smash it</a>
   </div>
 
 </body>
