--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </p>
 
     <!-- ONE BUTTON ONLY -->
-    <a href="scan.html" class="cta">Smash it</a>
+    <a href="ar.html" class="cta">Smash it</a>
   </div>
 
 </body>
