--- a/index.html
+++ b/index.html
@@ -2,117 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>2025-26</title>
+  <title>ARIMAGE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --bg: #0b0b0d;
-      --text: #f2f2f2;
-      --muted: #a1a1aa;
-      --accent: #6c63ff;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
-    }
-
-    body {
-      background: var(--bg);
-      color: var(--text);
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    /* ===== Animated Background ===== */
-    .bg {
-      position: fixed;
-      inset: 0;
-      z-index: -1;
-      background:
-        radial-gradient(circle at 20% 30%, rgba(108,99,255,0.15), transparent 40%),
-        radial-gradient(circle at 80% 70%, rgba(255,255,255,0.06), transparent 40%);
-      animation: floatBG 12s ease-in-out infinite alternate;
-    }
-
-    @keyframes floatBG {
-      from { transform: scale(1) translateY(0); }
-      to { transform: scale(1.05) translateY(-10px); }
-    }
-
-    /* ===== Center Layout ===== */
-    .container {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 40px;
-      animation: fadeUp 1.2s ease forwards;
-    }
-
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    h1 {
-      font-size: clamp(2.5rem, 6vw, 4rem);
-      font-weight: 600;
-      letter-spacing: -0.03em;
-      margin-bottom: 14px;
-    }
-
-    p {
-      color: var(--muted);
-      max-width: 520px;
-      font-size: 1.05rem;
-    }
-
-    /* ===== Button ===== */
-    .cta {
-      margin-top: 40px;
-      padding: 16px 34px;
-      background: var(--accent);
-      border-radius: 999px;
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 1rem;
-      transition: transform 0.35s ease, box-shadow 0.35s ease;
-    }
-
-    .cta:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 18px 40px rgba(108,99,255,0.4);
-    }
-
-    .cta:active {
-      transform: scale(0.96);
-    }
-  </style>
+  <!-- Your CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+  <!-- Animated background -->
   <div class="bg"></div>
 
-  <div class="container">
-    <h1>2026-25</h1>
+  <!-- Main content -->
+  <main class="container">
+    <h1>ARIMAGE</h1>
     <p>
-      plukky
+      A quiet place where moments come alive.
     </p>
 
-    <!-- ONE BUTTON ONLY -->
-    <a href="ar.html" class="cta">Smash it</a>
-  </div>
+    <!-- ONE BUTTON -->
+    <a href="ar.html" class="cta">Explore</a>
+  </main>
 
 </body>
 </html>
