--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       inset: 0;
       z-index: -1;
       background:
-        radial-gradient(circle at 20% 30%, rgba(108,99,255,0.15), transparent 40%),
+        radial-gradient(circle at 40% 30%, rgba(108,99,255,0.15), transparent 60%),
         radial-gradient(circle at 80% 70%, rgba(255,255,255,0.06), transparent 40%);
       animation: floatBG 12s ease-in-out infinite alternate;
     }
@@ -107,11 +107,11 @@
   <div class="container">
     <h1>2K25-26</h1>
     <p>
-      PlUKKKY
+      This redirects you 2 the scanner page 
     </p>
 
-    <!-- ONE BUTTON ONLY -->
-    <a href="ar.html" class="cta">Smash</a>
+ 
+    <a href="ar.html" class="cta">SCAN</a>
   </div>
 
 </body>
