--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .bg {
       position: fixed;
       inset: 0;
-      z-index: -1;
+      z-index: -2;
       background:
         radial-gradient(circle at 30% 40%, rgba(108,99,255,0.15), transparent 30%),
         radial-gradient(circle at 60% 70%, rgba(255,255,255,0.06), transparent 40%);
@@ -44,6 +44,66 @@
     @keyframes floatBG {
       from { transform: scale(1) translateY(0); }
       to { transform: scale(1.05) translateY(-10px); }
+    }
+
+    /* ===== LEFT NAME STRIP ===== */
+    .name-strip {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 200px;
+      height: 100vh;
+      overflow: hidden;
+      z-index: -1;
+      pointer-events: none;
+    }
+
+    .name-track {
+      display: flex;
+      flex-direction: column;
+      animation: scrollNames 70s linear infinite;
+      will-change: transform;
+    }
+
+    .names {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 22px;
+    }
+
+    .names span {
+      font-size: 13px;
+      font-weight: 400;
+      letter-spacing: 1.4px;
+      color: rgba(255,255,255,0.45);
+      text-transform: uppercase;
+    }
+
+    @keyframes scrollNames {
+      from { transform: translateY(0%); }
+      to { transform: translateY(-50%); }
+    }
+
+    /* Fade Mask */
+    .name-strip::before,
+    .name-strip::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 150px;
+      pointer-events: none;
+    }
+
+    .name-strip::before {
+      top: 0;
+      background: linear-gradient(to bottom, var(--bg), transparent);
+    }
+
+    .name-strip::after {
+      bottom: 0;
+      background: linear-gradient(to top, var(--bg), transparent);
     }
 
     /* ===== Center Layout ===== */
@@ -97,6 +157,14 @@
     .cta:active {
       transform: scale(0.96);
     }
+
+    /* Hide name strip on small screens */
+    @media(max-width: 900px){
+      .name-strip {
+        display: none;
+      }
+    }
+
   </style>
 </head>
 
@@ -104,13 +172,45 @@
 
   <div class="bg"></div>
 
+  <!-- Scrolling Names -->
+  <div class="name-strip">
+    <div class="name-track">
+      <div class="names">
+        <span>AARAV</span>
+        <span>ADITYA</span>
+        <span>ANANYA</span>
+        <span>DIYA</span>
+        <span>ROHAN</span>
+        <span>VISHNU</span>
+        <span>ARYAN</span>
+        <span>KRISHNA</span>
+        <span>NIHAL</span>
+        <span>SNEHA</span>
+        <!-- add all 65 names here -->
+      </div>
+
+      <!-- Duplicate for seamless loop -->
+      <div class="names">
+        <span>AARAV</span>
+        <span>ADITYA</span>
+        <span>ANANYA</span>
+        <span>DIYA</span>
+        <span>ROHAN</span>
+        <span>VISHNU</span>
+        <span>ARYAN</span>
+        <span>KRISHNA</span>
+        <span>NIHAL</span>
+        <span>SNEHA</span>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <h1>2K25-26</h1>
     <p>
-      This redirects you 2 the scanner page 
+      This redirects you 2 the scanner page
     </p>
 
- 
     <a href="ar.html" class="cta">SCAN</a>
   </div>
 
