--- a/index.html
+++ b/index.html
@@ -98,48 +98,39 @@
       transform: scale(0.96);
     }
 
-    /* ===== Center Credit Roll ===== */
-    .credit-wrapper {
+    /* ===== Credits Under Button ===== */
+    .credits {
       position: relative;
       margin-top: 50px;
-      width: 100%;
-      max-width: 300px;
+      width: 260px;
       height: 140px;
       overflow: hidden;
       pointer-events: none;
-      opacity: 0.55;
     }
 
-    .credit-track {
-      display: flex;
-      flex-direction: column;
-      animation: creditScroll 60s linear infinite;
-      will-change: transform;
-    }
-
-    .credits {
+    .credits-track {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 22px;
+      animation: creditScroll 45s linear infinite;
     }
 
     .credits span {
+      font-size: 12px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.6);
+      margin: 10px 0;
+      text-shadow:
+        0 0 6px rgba(255,255,255,0.15),
+        0 0 12px rgba(108,99,255,0.18);
+    }
+
+    .credits span.title {
       font-size: 13px;
       font-weight: 500;
       letter-spacing: 3px;
-      text-transform: uppercase;
-      color: rgba(255,255,255,0.8);
-      text-shadow:
-        0 0 6px rgba(255,255,255,0.18),
-        0 0 14px rgba(108,99,255,0.25);
-    }
-
-    .credits span:first-child {
-      font-size: 14px;
-      font-weight: 600;
-      letter-spacing: 4px;
-      opacity: 0.9;
+      opacity: 0.8;
     }
 
     @keyframes creditScroll {
@@ -147,28 +138,26 @@
       100% { transform: translateY(-50%); }
     }
 
-    /* Fade mask */
-    .credit-wrapper::before,
-    .credit-wrapper::after {
+    /* Fade Mask */
+    .credits::before,
+    .credits::after {
       content: "";
       position: absolute;
       left: 0;
       width: 100%;
       height: 40px;
-      pointer-events: none;
-      z-index: 1;
+      z-index: 2;
     }
 
-    .credit-wrapper::before {
+    .credits::before {
       top: 0;
       background: linear-gradient(to bottom, var(--bg), transparent);
     }
 
-    .credit-wrapper::after {
+    .credits::after {
       bottom: 0;
       background: linear-gradient(to top, var(--bg), transparent);
     }
-
   </style>
 </head>
 
@@ -178,48 +167,39 @@
 
   <div class="container">
     <h1>2K25-26</h1>
-    <p>
-      This redirects you 2 the scanner page
-    </p>
+    <p>This redirects you 2 the scanner page</p>
 
     <a href="ar.html" class="cta">SCAN</a>
 
-    <!-- Scrolling Credits -->
-    <div class="credit-wrapper">
-      <div class="credit-track">
+    <!-- Credits -->
+    <div class="credits">
+      <div class="credits-track">
+        <span class="title">Directed By</span>
+        <span>AARAV</span>
+        <span>ADITYA</span>
+        <span>ANANYA</span>
+        <span>DIYA</span>
+        <span>ROHAN</span>
+        <span>VISHNU</span>
+        <span>ARYAN</span>
+        <span>KRISHNA</span>
+        <span>NIHAL</span>
+        <span>SNEHA</span>
 
-        <div class="credits">
-          <span>DIRECTED BY</span>
-          <span>AARAV</span>
-          <span>ADITYA</span>
-          <span>ANANYA</span>
-          <span>DIYA</span>
-          <span>ROHAN</span>
-          <span>VISHNU</span>
-          <span>ARYAN</span>
-          <span>KRISHNA</span>
-          <span>NIHAL</span>
-          <span>SNEHA</span>
-        </div>
-
-        <!-- Duplicate for seamless loop -->
-        <div class="credits">
-          <span>DIRECTED BY</span>
-          <span>AARAV</span>
-          <span>ADITYA</span>
-          <span>ANANYA</span>
-          <span>DIYA</span>
-          <span>ROHAN</span>
-          <span>VISHNU</span>
-          <span>ARYAN</span>
-          <span>KRISHNA</span>
-          <span>NIHAL</span>
-          <span>SNEHA</span>
-        </div>
-
+        <!-- duplicate for seamless loop -->
+        <span class="title">Directed By</span>
+        <span>AARAV</span>
+        <span>ADITYA</span>
+        <span>ANANYA</span>
+        <span>DIYA</span>
+        <span>ROHAN</span>
+        <span>VISHNU</span>
+        <span>ARYAN</span>
+        <span>KRISHNA</span>
+        <span>NIHAL</span>
+        <span>SNEHA</span>
       </div>
     </div>
-
   </div>
 
 </body>
