--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     }
 
     @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(200px); }
+      from { opacity: 0; transform: translateY(40px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
@@ -98,66 +98,61 @@
       transform: scale(0.96);
     }
 
-    /* ===== Credits Under Button ===== */
-    .credits {
-      position: relative;
+    /* ===== Credits ===== */
+    .credit-wrapper {
       margin-top: 50px;
-      width: 260px;
-      height: 140px;
+      height: 160px;
+      width: 100%;
+      max-width: 280px;
       overflow: hidden;
-      pointer-events: none;
+      position: relative;
+      opacity: 0.65;
     }
 
-    .credits-track {
+    .credit-track {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      animation: creditScroll 45s linear infinite;
+      animation: scrollUp 40s linear infinite;
     }
 
-    .credits span {
-      font-size: 12px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      color: rgba(255,255,255,0.6);
-      margin: 10px 0;
-      text-shadow:
-        0 0 6px rgba(255,255,255,0.15),
-        0 0 12px rgba(108,99,255,0.18);
-    }
-
-    .credits span.title {
-      font-size: 13px;
-      font-weight: 500;
+    .credit-track span {
+      padding: 10px 0;
+      font-size: 14px;
       letter-spacing: 3px;
-      opacity: 0.8;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.85);
+      text-shadow:
+        0 0 6px rgba(255,255,255,0.25),
+        0 0 12px rgba(108,99,255,0.35);
     }
 
-    @keyframes creditScroll {
-      0% { transform: translateY(50%); }
-      100% { transform: translateY(-50%); }
+    @keyframes scrollUp {
+      from { transform: translateY(0); }
+      to { transform: translateY(-50%); }
     }
 
-    /* Fade Mask */
-    .credits::before,
-    .credits::after {
+    /* Fade mask */
+    .credit-wrapper::before,
+    .credit-wrapper::after {
       content: "";
       position: absolute;
       left: 0;
       width: 100%;
       height: 40px;
+      pointer-events: none;
       z-index: 2;
     }
 
-    .credits::before {
+    .credit-wrapper::before {
       top: 0;
       background: linear-gradient(to bottom, var(--bg), transparent);
     }
 
-    .credits::after {
+    .credit-wrapper::after {
       bottom: 0;
       background: linear-gradient(to top, var(--bg), transparent);
     }
+
   </style>
 </head>
 
@@ -167,14 +162,17 @@
 
   <div class="container">
     <h1>2K25-26</h1>
-    <p>This redirects you 2 the scanner page</p>
+    <p>
+      This redirects you 2 the scanner page
+    </p>
 
     <a href="ar.html" class="cta">SCAN</a>
 
     <!-- Credits -->
-    <div class="credits">
-      <div class="credits-track">
-        <span class="title">Directed By</span>
+    <div class="credit-wrapper">
+      <div class="credit-track">
+
+        <span>DIRECTED BY</span>
         <span>AARAV</span>
         <span>ADITYA</span>
         <span>ANANYA</span>
@@ -186,8 +184,8 @@
         <span>NIHAL</span>
         <span>SNEHA</span>
 
-        <!-- duplicate for seamless loop -->
-        <span class="title">Directed By</span>
+        <!-- Duplicate for seamless loop -->
+        <span>DIRECTED BY</span>
         <span>AARAV</span>
         <span>ADITYA</span>
         <span>ANANYA</span>
@@ -198,8 +196,10 @@
         <span>KRISHNA</span>
         <span>NIHAL</span>
         <span>SNEHA</span>
+
       </div>
     </div>
+
   </div>
 
 </body>
