--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .bg {
       position: fixed;
       inset: 0;
-      z-index: -2;
+      z-index: -3;
       background:
         radial-gradient(circle at 30% 40%, rgba(108,99,255,0.15), transparent 30%),
         radial-gradient(circle at 60% 70%, rgba(255,255,255,0.06), transparent 40%);
@@ -46,8 +46,46 @@
       to { transform: scale(1.05) translateY(-10px); }
     }
 
+    /* ===== Full Page Scrolling Names ===== */
+    .credits {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      pointer-events: none;
+      z-index: -1;
+      opacity: 0.08; /* subtle background effect */
+    }
+
+    .credit-track {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+      animation: scrollUp 45s linear infinite;
+    }
+
+    .credit-track span {
+      font-size: 20px;
+      font-weight: 600;
+      letter-spacing: 4px;
+      text-transform: uppercase;
+      color: white;
+      text-shadow:
+        0 0 10px rgba(255,255,255,0.4),
+        0 0 20px rgba(108,99,255,0.5);
+    }
+
+    @keyframes scrollUp {
+      from { transform: translateY(100%); }
+      to { transform: translateY(-100%); }
+    }
+
     /* ===== Center Layout ===== */
     .container {
+      position: relative;
+      z-index: 2;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -98,67 +136,44 @@
       transform: scale(0.96);
     }
 
-    /* ===== Credits ===== */
-    .credit-wrapper {
-      margin-top: 50px;
-      height: 160px;
-      width: 100%;
-      max-width: 280px;
-      overflow: hidden;
-      position: relative;
-      opacity: 0.65;
-    }
-
-    .credit-track {
-      display: flex;
-      flex-direction: column;
-      animation: scrollUp 40s linear infinite;
-    }
-
-    .credit-track span {
-      padding: 10px 0;
-      font-size: 14px;
-      letter-spacing: 3px;
-      text-transform: uppercase;
-      color: rgba(255,255,255,0.85);
-      text-shadow:
-        0 0 6px rgba(255,255,255,0.25),
-        0 0 12px rgba(108,99,255,0.35);
-    }
-
-    @keyframes scrollUp {
-      from { transform: translateY(0); }
-      to { transform: translateY(-50%); }
-    }
-
-    /* Fade mask */
-    .credit-wrapper::before,
-    .credit-wrapper::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 40px;
-      pointer-events: none;
-      z-index: 2;
-    }
-
-    .credit-wrapper::before {
-      top: 0;
-      background: linear-gradient(to bottom, var(--bg), transparent);
-    }
-
-    .credit-wrapper::after {
-      bottom: 0;
-      background: linear-gradient(to top, var(--bg), transparent);
-    }
-
   </style>
 </head>
 
 <body>
 
   <div class="bg"></div>
+
+  <!-- Full page scrolling credits -->
+  <div class="credits">
+    <div class="credit-track">
+
+      <span>DIRECTED BY</span>
+      <span>AARAV</span>
+      <span>ADITYA</span>
+      <span>ANANYA</span>
+      <span>DIYA</span>
+      <span>ROHAN</span>
+      <span>VISHNU</span>
+      <span>ARYAN</span>
+      <span>KRISHNA</span>
+      <span>NIHAL</span>
+      <span>SNEHA</span>
+
+      <!-- duplicate for seamless loop -->
+      <span>DIRECTED BY</span>
+      <span>AARAV</span>
+      <span>ADITYA</span>
+      <span>ANANYA</span>
+      <span>DIYA</span>
+      <span>ROHAN</span>
+      <span>VISHNU</span>
+      <span>ARYAN</span>
+      <span>KRISHNA</span>
+      <span>NIHAL</span>
+      <span>SNEHA</span>
+
+    </div>
+  </div>
 
   <div class="container">
     <h1>2K25-26</h1>
@@ -167,39 +182,6 @@
     </p>
 
     <a href="ar.html" class="cta">SCAN</a>
-
-    <!-- Credits -->
-    <div class="credit-wrapper">
-      <div class="credit-track">
-
-        <span>DIRECTED BY</span>
-        <span>AARAV</span>
-        <span>ADITYA</span>
-        <span>ANANYA</span>
-        <span>DIYA</span>
-        <span>ROHAN</span>
-        <span>VISHNU</span>
-        <span>ARYAN</span>
-        <span>KRISHNA</span>
-        <span>NIHAL</span>
-        <span>SNEHA</span>
-
-        <!-- Duplicate for seamless loop -->
-        <span>DIRECTED BY</span>
-        <span>AARAV</span>
-        <span>ADITYA</span>
-        <span>ANANYA</span>
-        <span>DIYA</span>
-        <span>ROHAN</span>
-        <span>VISHNU</span>
-        <span>ARYAN</span>
-        <span>KRISHNA</span>
-        <span>NIHAL</span>
-        <span>SNEHA</span>
-
-      </div>
-    </div>
-
   </div>
 
 </body>
