--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     }
 
     .scroll-up {
-      animation: scrollUp 60s linear infinite;
+      animation: scrollUp 30s linear infinite;
     }
 
     .scroll-down {
-      animation: scrollDown 60s linear infinite;
+      animation: scrollDown 30s linear infinite;
     }
 
     @keyframes scrollUp {
@@ -162,29 +162,68 @@
     <div class="credits-inner">
 
       <div class="column scroll-up">
-        <span>AARAV</span>
-        <span>ADITYA</span>
-        <span>ANANYA</span>
-        <span>DIYA</span>
-        <span>ROHAN</span>
-        <span>VISHNU</span>
-        <span>ARYAN</span>
-        <span>KRISHNA</span>
-        <span>NIHAL</span>
-        <span>SNEHA</span>
+        <span>John Paul</span>
+        <span>Abener</span>
+        <span>Abhinav J</span>
+        <span>Abhinav K.A</span>
+        <span>Abin</span>
+        <span>Abhinav Saijo</span>
+        <span>Adarsh</span>
+        <span>Akash</span>
+        <span>Alan</span>
+        <span>Alfrence</span>
+        <span>Alwin</span>
+        <span>AnandhaKrishnan</span>
+        <span>Anaswar</span>
+        <span>Anto</span>
+        <span>Antony</span>
+        <span>Arnold</span>
+        <span>Asvin</span>
+        <span>Avin</span>
+        <span>Belwin</span>
+        <span>Bhanumithran</span>
+        <span>Bringston</span>
+        <span>Denil</span>
+        <span>Godson</span>
+        <span>Godwin</span>
+        <span>Goutham</span>
+        <span>Harshit</span>
+        <span>Hrishikesh</span>
+        <span>Anfino</span>
+        <span>Justin</span>
+        <span>Maheswar</span>
       </div>
 
       <div class="column scroll-down">
-        <span>ARYAN</span>
-        <span>KRISHNA</span>
-        <span>NIHAL</span>
-        <span>SNEHA</span>
-        <span>AARAV</span>
-        <span>ADITYA</span>
-        <span>ANANYA</span>
-        <span>DIYA</span>
-        <span>ROHAN</span>
-        <span>VISHNU</span>
+        <span>Kevin</span>
+        <span>Keyin</span>
+        <span>Manual</span>
+        <span>Nilav</span>
+        <span>Nivedh</span>
+        <span>Prajith</span>
+        <span>Rajath</span>
+        <span>Sanal</span>
+        <span>Sanjay</span>
+        <span>Sanjo</span>
+        <span>Sharon</span>
+        <span>Sreenath</span>
+        <span>Sreerang</span>
+        <span>Tom</span>
+        <span>Vijin</span>
+        <span>Vishnu</span>
+        <span>Adwitiya</span>
+        <span>Anat</span>
+        <span>Anusree</span>
+        <span>Archana</span>
+        <span>Aryalakshmi</span>
+        <span>Athulya</span>
+        <span>Gangalakshmi</span>
+        <span>Jereena</span>
+        <span>Joshiha</span>
+        <span>Pavitra</span>
+        <span>Sreenandha</span>
+        <span>Umadevi</span>
+        <span>Vaiga</span>
       </div>
 
     </div>
